--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="https://blakecassidy.github.io/Sitio_Web_Blog/">Blog</a></li>
                 <li><a href="https://blakecassidy.github.io/Sitio_Web_Contacto/">Contacto</a></li>
                 <li><a href="https://blakecassidy.github.io/Sitio_Web_SobreMi/">Sobre Mí</a></li>
-                <li><a href="">Etiquetas Semánticas</a></li>
+                <li><a href="https://blakecassidy.github.io/Sitio_Web_Etiquetas/">Etiquetas Semánticas</a></li>
                 <li><a href="">Galería</a></li>
             </ul>
         </nav>
